; ModuleID = '/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_ranges.c_quicly_ranges_init_with_range.c'
source_filename = "/home/carl/AnghaBench/h2o/deps/quicly/lib/extr_ranges.c_quicly_ranges_init_with_range.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @quicly_ranges_init_with_range(i32* %0, i32 %1, i32 %2) #0 {
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  store i32 %2, i32* %6, align 4
  %7 = load i32*, i32** %4, align 8
  %8 = call i32 @quicly_ranges_init(i32* %7)
  %9 = load i32*, i32** %4, align 8
  %10 = load i32, i32* %5, align 4
  %11 = load i32, i32* %6, align 4
  %12 = call i32 @insert_at(i32* %9, i32 %10, i32 %11, i32 0)
  ret i32 %12
}

declare dso_local i32 @quicly_ranges_init(i32*) #1

declare dso_local i32 @insert_at(i32*, i32, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
